<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bus_times"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.andrewwilloughby.campus_assistant.BusTimes">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/chancellorWayBusBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chancellorWayBusBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/TextWhite"
            android:textAllCaps="false" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:text="@string/whiteknightsHouseBusBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/whiteknightsHouseBusBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/TextWhite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textAllCaps="false" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:text="@string/railStationBusBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/readingStationBusBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/TextWhite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textAllCaps="false" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/TextWhite"
            android:id="@+id/busHeaderTextView"
            android:elevation="21dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/refreshHeaderText" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/routeTxtView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/routeTxtViewText" />

        <TextView
            android:text="@string/destinationTxtViewText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/destinationTxtView"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:text="@string/arrivalTxtViewText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/arrivalTxtView"
            android:layout_weight="1"
            android:textAlignment="center" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bus_swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="424dp" >
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/busList"
            android:clickable="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/detailsElementBackground" />
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
