<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.andrewwilloughby.campus_assistant.MainActivity"
    android:background="?android:attr/detailsElementBackground"
    android:overScrollMode="always">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activityContainer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/headImageContainer">

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/uor_bg_image"
                android:id="@+id/headBackgroundImage"
                android:scaleType="fitXY"
                android:layout_height="175dp" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_height="35dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content">

                <ImageButton
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/grid_icon"
                    android:layout_weight="1"
                    android:layout_width="30dp"
                    android:background="@android:color/transparent"
                    android:id="@+id/viewStyleBtn" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="260dp"></LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/safety_icon"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:id="@+id/safetyBtn"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="0dp"
                    android:layout_width="50dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/gridLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/firstRowLayout"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/mainStudentInfoBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainStudentInfoBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/StudentInfoColor"
                    android:layout_marginRight="2.5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/TextWhite"
                    android:elevation="4dp"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/mainLatestNewsBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainLatestNewsBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/LatestNewsColor"
                    android:layout_marginLeft="2.5dp"
                    android:textAllCaps="false"
                    android:elevation="4dp"
                    android:textColor="@color/TextWhite"
                    android:layout_height="95dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/secondRowLayout"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/mainCampusNavBtnText"
                    android:id="@+id/mainCampusNavBtn"
                    android:layout_weight="1"
                    android:layout_width="90dp"
                    android:background="@color/CampusNavigationColor"
                    android:textSize="12sp"
                    android:layout_marginRight="2.5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/TextWhite"
                    android:elevation="4dp"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/mainTravelInfoBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainTravelInfoBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/TravelInformationColor"
                    android:layout_marginLeft="2.5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/TextWhite"
                    android:elevation="4dp"
                    android:layout_height="95dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/thirdRowLayout"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/mainBbEmailBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainBbEmailBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginRight="2.5dp"
                    android:background="@color/BBEmailColour"
                    android:textAllCaps="false"
                    android:textColor="@color/TextWhite"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/mainTimetableBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/mainTimetableBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginLeft="2.5dp"
                    android:background="@color/TimetableColor"
                    android:textAllCaps="false"
                    android:textColor="@color/TextWhite"
                    android:layout_height="95dp" />
            </LinearLayout>
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/expandableList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="#000000"
            android:dividerHeight="0.1dp"
            android:visibility="visible"></ExpandableListView>


    </LinearLayout>

</RelativeLayout>
