...
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <Button
            android:text="@string/travelInfoBusTimesBtnText"
            android:layout_width="90dp"
            android:id="@+id/travelInfoBusTimesBtn"
            android:layout_weight="1"
            android:textSize="12sp"
            android:background="@color/TravelInformationColor"
            android:layout_marginRight="2.5dp"
            android:textAllCaps="false"
            android:textColor="@color/TextWhite"
...
